--- a/src/styles/section/_footer.scss
+++ b/src/styles/section/_footer.scss
@@ -1,19 +1,19 @@
-.footer {
+.b-footer {
   color: #FBFBFB;
   background-color: $blackColor;
 }
 
-.footer__social {
+.b-footer__social {
   padding-left: 0;
   list-style: none;
   display: flex;
 }
 
-.footer__social-item:not(:last-child) {
+.b-footer__social-item:not(:last-child) {
   margin-right: 8px;
 }
 
-.footer__social-icon {
+.b-footer__social-icon {
   width: 32px;
   height: 32px;
   fill: $blackColor;
@@ -27,12 +27,12 @@
 }
 
 @media (min-width: 700px) {
-  .footer__inner {
+  .b-footer__inner {
     height: 79px;
     display: flex;
     align-items: center;
   }
-  .footer__social {
+  .b-footer__social {
     margin-bottom: 0;
     margin-left: auto;
     order: 1;
@@ -40,12 +40,12 @@
 }
 
 @media (max-width: 699px) {
-  .footer {
+  .b-footer {
     padding-top: 43px;
     padding-bottom: 43px;
     text-align: center;
   }
-  .footer__social {
+  .b-footer__social {
     margin-bottom: 40px;
     justify-content: center;
   }
