--- a/src/twig/product.twig
+++ b/src/twig/product.twig
@@ -1,6 +1,6 @@
 {% extends './templates/_layout.twig' %}
-{% set title = "Product Luxerious fashion" %}
-{% set titlePage = "Product Page" %}
+{% set title = "product Luxerious fashion" %}
+{% set titlePage = "product Page" %}
 {% set description = "Description for catalog page" %}
 {% set breadcrumb = "true" %}
 {% set featured = "false" %}
@@ -8,7 +8,7 @@
 {% block content %}
   {% include './templates/_header__page.twig' %}
 
-  <div class="detail__slider glide">
+  <div class="b-detail__slider glide">
     <div class="glide__track" data-glide-el="track">
       <ul class="glide__slides">
         <li class="glide__slide">
@@ -32,119 +32,119 @@
     </div>
   </div>
 
-  <main class="container">
-    <div class="detail">
-      <div class="detail__category">WOMEN COLLECTION</div>
+  <main class="b-container">
+    <div class="b-detail">
+      <div class="b-detail__category">WOMEN COLLECTION</div>
 
-      <h2 class="detail__title">MOSCHINO CHEAP AND CHIC</h2>
+      <h2 class="b-detail__title">MOSCHINO CHEAP AND CHIC</h2>
 
-      <p class="detail__text">
+      <p class="b-detail__text">
         Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather than exceptional portals.
       </p>
 
-      <div class="detail__cost">$561</div>
+      <div class="b-detail__cost">$561</div>
 
-      <hr class="detail__decor">
+      <hr class="b-detail__decor">
 
       <!-- Begin: detail__select -->
-      <div class="detail__select">
-        <div class="detail__box sorting__box">
-          <div class="sorting__box-heading acc js-collapse">
+      <div class="b-detail__select">
+        <div class="b-detail__box sorting__box">
+          <div class="b-sorting__box-heading acc js-collapse">
             CHOOSE COLOR
-            <svg class="sorting__box-decor">
+            <svg class="b-sorting__box-decor">
               <use xlink:href="assets/img/sprite.svg#chevron"></use>
             </svg>
           </div>
 
-          <ul class="sorting__dropdown acc__content list__unstyled">
+          <ul class="b-sorting__dropdown acc__content list__unstyled">
             <li>
-              <label class="custom__control">
-                <input type="checkbox" class="custom__control-input">
-                <span class="custom__checkbox custom__control-label">Red</span>
+              <label class="b-custom__control">
+                <input type="checkbox" class="b-custom__control-input">
+                <span class="b-custom__checkbox b-custom__control-label">Red</span>
               </label>
             </li>
             <li>
-              <label class="custom__control">
-                <input type="checkbox" class="custom__control-input">
-                <span class="custom__checkbox custom__control-label">Black</span>
+              <label class="b-custom__control">
+                <input type="checkbox" class="b-custom__control-input">
+                <span class="b-custom__checkbox b-custom__control-label">Black</span>
               </label>
             </li>
             <li>
-              <label class="custom__control">
-                <input type="checkbox" class="custom__control-input">
-                <span class="custom__checkbox custom__control-label">Pink</span>
+              <label class="b-custom__control">
+                <input type="checkbox" class="b-custom__control-input">
+                <span class="b-custom__checkbox b-custom__control-label">Pink</span>
               </label>
             </li>
           </ul>
         </div>
 
-        <div class="detail__box sorting__box">
-          <div class="sorting__box-heading acc js-collapse">
+        <div class="b-detail__box sorting__box">
+          <div class="b-sorting__box-heading acc js-collapse">
             CHOOSE SIZE
-            <svg class="sorting__box-decor">
+            <svg class="b-sorting__box-decor">
               <use xlink:href="assets/img/sprite.svg#chevron"></use>
             </svg>
           </div>
 
-          <ul class="sorting__dropdown acc__content list__unstyled">
+          <ul class="b-sorting__dropdown acc__content list__unstyled">
             <li>
-              <label class="custom__control">
-                <input type="checkbox" class="custom__control-input">
-                <span class="custom__checkbox custom__control-label">XS</span>
+              <label class="b-custom__control">
+                <input type="checkbox" class="b-custom__control-input">
+                <span class="b-custom__checkbox b-custom__control-label">XS</span>
               </label>
             </li>
             <li>
-              <label class="custom__control">
-                <input type="checkbox" class="custom__control-input">
-                <span class="custom__checkbox custom__control-label">S</span>
+              <label class="b-custom__control">
+                <input type="checkbox" class="b-custom__control-input">
+                <span class="b-custom__checkbox b-custom__control-label">S</span>
               </label>
             </li>
             <li>
-              <label class="custom__control">
-                <input type="checkbox" class="custom__control-input">
-                <span class="custom__checkbox custom__control-label">M</span>
+              <label class="b-custom__control">
+                <input type="checkbox" class="b-custom__control-input">
+                <span class="b-custom__checkbox b-custom__control-label">M</span>
               </label>
             </li>
             <li>
-              <label class="custom__control">
-                <input type="checkbox" class="custom__control-input">
-                <span class="custom__checkbox custom__control-label">L</span>
+              <label class="b-custom__control">
+                <input type="checkbox" class="b-custom__control-input">
+                <span class="b-custom__checkbox b-custom__control-label">L</span>
               </label>
             </li>
           </ul>
         </div>
 
-        <div class="detail__box sorting__box">
-          <div class="sorting__box-heading acc js-collapse">
+        <div class="b-detail__box sorting__box">
+          <div class="b-sorting__box-heading acc js-collapse">
             QUANTITY
-            <svg class="sorting__box-decor">
+            <svg class="b-sorting__box-decor">
               <use xlink:href="assets/img/sprite.svg#chevron"></use>
             </svg>
           </div>
 
-          <div class="sorting__dropdown acc__content">
-            <input type="number" class="form__field">
+          <div class="b-sorting__dropdown acc__content">
+            <input type="number" class="b-form__field">
           </div>
         </div>
       </div>
       <!-- End: detail__select -->
 
-      <a href="#" class="btn__light btn">
-        <svg class="btn__light-icon">
+      <a href="#" class="b-btn__light b-btn">
+        <svg class="b-btn__light-icon">
           <use xlink:href="assets/img/sprite.svg#basket"></use>
         </svg>
         Add to Cart
       </a>
     </div>
 
-    <div class="detail__similar product__list">
-      <div class="product__item">
-        <div class="product__media">
+    <div class="b-detail__similar b-product__list">
+      <div class="b-product__item">
+        <div class="b-product__media">
           <img src="assets/img/products/img-04.jpg" alt="">
 
-          <div class="product__add">
-            <button type="button" class="btn btn__cart">
-              <svg class="btn__cart-icon">
+          <div class="b-product__add">
+            <button type="button" class="b-btn b-btn__cart">
+              <svg class="b-btn__cart-icon">
                 <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
@@ -152,24 +152,24 @@
           </div>
         </div>
 
-        <div class="product__boxed">
-          <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+        <div class="b-product__boxed">
+          <h3 class="b-product__boxed-title">ELLERY X M'O CAPSULE</h3>
 
-          <p class="product__boxed-text">
+          <p class="b-product__boxed-text">
             Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
           </p>
 
-          <div class="product__boxed-cost">$52.00</div>
+          <div class="b-product__boxed-cost">$52.00</div>
         </div>
       </div>
 
-      <div class="product__item">
-        <div class="product__media">
+      <div class="b-product__item">
+        <div class="b-product__media">
           <img src="assets/img/products/img-03.jpg" alt="">
 
-          <div class="product__add">
-            <button type="button" class="btn btn__cart">
-              <svg class="btn__cart-icon">
+          <div class="b-product__add">
+            <button type="button" class="b-btn b-btn__cart">
+              <svg class="b-btn__cart-icon">
                 <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
@@ -177,24 +177,24 @@
           </div>
         </div>
 
-        <div class="product__boxed">
-          <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+        <div class="b-product__boxed">
+          <h3 class="b-product__boxed-title">ELLERY X M'O CAPSULE</h3>
 
-          <p class="product__boxed-text">
+          <p class="b-product__boxed-text">
             Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
           </p>
 
-          <div class="product__boxed-cost">$52.00</div>
+          <div class="b-product__boxed-cost">$52.00</div>
         </div>
       </div>
 
-      <div class="product__item">
-        <div class="product__media">
+      <div class="b-product__item">
+        <div class="b-product__media">
           <img src="assets/img/products/img-06.jpg" alt="">
 
-          <div class="product__add">
-            <button type="button" class="btn btn__cart">
-              <svg class="btn__cart-icon">
+          <div class="b-product__add">
+            <button type="button" class="b-btn b-btn__cart">
+              <svg class="b-btn__cart-icon">
                 <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
@@ -202,14 +202,14 @@
           </div>
         </div>
 
-        <div class="product__boxed">
-          <h3 class="product__boxed-title">ELLERY X M'O CAPSULE</h3>
+        <div class="b-product__boxed">
+          <h3 class="b-product__boxed-title">ELLERY X M'O CAPSULE</h3>
 
-          <p class="product__boxed-text">
+          <p class="b-product__boxed-text">
             Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
           </p>
 
-          <div class="product__boxed-cost">$52.00</div>
+          <div class="b-product__boxed-cost">$52.00</div>
         </div>
       </div>
     </div>
