--- a/src/twig/reg.twig
+++ b/src/twig/reg.twig
@@ -7,67 +7,67 @@
 {% block content %}
 {% include './templates/_header__page.twig' %}
 
-<main class="reg container">
-  <form action="#" class="reg__form">
-    <h5 class="reg__form-title">Your Name</h5>
+<main class="b-reg b-container">
+  <form action="#" class="b-reg__form">
+    <h5 class="b-reg__form-title">Your Name</h5>
 
-    <div class="form__group">
+    <div class="b-form__group">
       <label for="first-name" class="sr-only">First Name</label>
-      <input type="text" class="form__field form__placeholder" id="first-name" placeholder="First Name">
+      <input type="text" class="b-form__field b-form__placeholder" id="first-name" placeholder="First Name">
     </div>
 
-    <div class="form__group">
+    <div class="b-form__group">
       <label for="last-name" class="sr-only">Last Name</label>
-      <input type="text" class="form__field form__placeholder" id="last-name" placeholder="Last Name">
+      <input type="text" class="b-form__field b-form__placeholder" id="last-name" placeholder="Last Name">
     </div>
 
-    <div class="reg__form-radio form__group">
-      <label class="custom__control">
-        <input type="radio" name="radio01" class="custom__control-input">
-        <span class="custom__radio custom__control-label">Male</span>
+    <div class="b-reg__form-radio b-form__group">
+      <label class="b-custom__control">
+        <input type="radio" name="radio01" class="b-custom__control-input">
+        <span class="b-custom__radio b-custom__control-label">Male</span>
       </label>
-      <label class="custom__control">
-        <input type="radio" name="radio01" class="custom__control-input">
-        <span class="custom__radio custom__control-label">Female</span>
+      <label class="b-custom__control">
+        <input type="radio" name="radio01" class="b-custom__control-input">
+        <span class="b-custom__radio b-custom__control-label">Female</span>
       </label>
-      <label class="custom__control">
-        <input type="radio" name="radio01" class="custom__control-input">
-        <span class="custom__radio custom__control-label">Other</span>
+      <label class="b-custom__control">
+        <input type="radio" name="radio01" class="b-custom__control-input">
+        <span class="b-custom__radio b-custom__control-label">Other</span>
       </label>
     </div>
 
-    <h5 class="reg__form-title">Login details</h5>
+    <h5 class="b-reg__form-title">Login details</h5>
 
-    <div class="form__group">
+    <div class="b-form__group">
       <label for="email" class="sr-only">Email</label>
-      <input type="email" class="form__field form__placeholder" id="email" placeholder="Email">
+      <input type="email" class="b-form__field b-form__placeholder" id="email" placeholder="Email">
     </div>
 
-    <div class="form__group">
+    <div class="b-form__group">
       <label for="password" class="sr-only">Password</label>
-      <input type="password" class="form__field form__placeholder" id="password" placeholder="Password">
+      <input type="password" class="b-form__field b-form__placeholder" id="password" placeholder="Password">
 
-      <div class="reg__form-hint">
+      <div class="b-reg__form-hint">
         Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase letters
       </div>
     </div>
 
-    <button class="btn__primary btn">JOIN NOW</button>
+    <button class="b-btn__primary b-btn">JOIN NOW</button>
   </form>
 
-  <aside class="reg__info">
-    <h4 class="reg__info-title">LOYALTY HAS ITS PERKS</h4>
+  <aside class="b-reg__info">
+    <h4 class="b-reg__info-title">LOYALTY HAS ITS PERKS</h4>
 
-    <div class="reg__info-text">
+    <div class="b-reg__info-text">
       Get in on the loyalty program where you can earn points and unlock serious perks. Starting with these as soon as you join:
     </div>
 
-    <ul class="reg__info-list list__unstyled">
-      <li>15% off welcome offer</li>
-      <li>Free shipping, returns and exchanges on all orders</li>
-      <li>$10 off a purchase on your birthday</li>
-      <li>Early access to products</li>
-      <li>Exclusive offers & rewards</li>
+    <ul class="b-reg__info-list list__unstyled">
+      <li class="b-reg__info-item">15% off welcome offer</li>
+      <li class="b-reg__info-item">Free shipping, returns and exchanges on all orders</li>
+      <li class="b-reg__info-item">$10 off a purchase on your birthday</li>
+      <li class="b-reg__info-item">Early access to products</li>
+      <li class="b-reg__info-item">Exclusive offers & rewards</li>
     </ul>
   </aside>
 </main>
