--- a/src/twig/templates/_footer.twig
+++ b/src/twig/templates/_footer.twig
@@ -1,38 +1,38 @@
 {% if featured != "false" %}
-<section class="featured">
-  <div class="featured__inner container">
-    <div class="featured__box">
-      <svg class="featured__icon">
+<section class="b-featured">
+  <div class="b-featured__inner b-container">
+    <div class="b-featured__box">
+      <svg class="b-featured__icon">
         <use xlink:href="assets/img/sprite.svg#delivery"></use>
       </svg>
 
-      <h3 class="featured__title">Free Delivery</h3>
+      <h3 class="b-featured__title">Free Delivery</h3>
 
-      <div class="featured__text">
+      <div class="b-featured__text">
         Worldwide delivery on all. Authorit tively morph next-generation innovation with extensive models.
       </div>
     </div>
 
-    <div class="featured__box">
-      <svg class="featured__icon">
+    <div class="b-featured__box">
+      <svg class="b-featured__icon">
         <use xlink:href="assets/img/sprite.svg#sale"></use>
       </svg>
 
-      <h3 class="featured__title">Sales & discounts</h3>
+      <h3 class="b-featured__title">Sales & discounts</h3>
 
-      <div class="featured__text">
+      <div class="b-featured__text">
         Worldwide delivery on all. Authorit tively morph next-generation innovation with extensive models.
       </div>
     </div>
 
-    <div class="featured__box">
-      <svg class="featured__icon">
+    <div class="b-featured__box">
+      <svg class="b-featured__icon">
         <use xlink:href="assets/img/sprite.svg#quality"></use>
       </svg>
 
-      <h3 class="featured__title">Quality assurance</h3>
+      <h3 class="b-featured__title">Quality assurance</h3>
 
-      <div class="featured__text">
+      <div class="b-featured__text">
         Worldwide delivery on all. Authorit tively morph next-generation innovation with extensive models.
       </div>
     </div>
@@ -40,59 +40,59 @@
 </section>
 {% endif %}
 
-<section class="subscribe">
-  <div class="subscribe__inner container">
-    <aside class="subscribe__call">
+<section class="b-subscribe">
+  <div class="b-subscribe__inner b-container">
+    <aside class="b-subscribe__call">
       <img src="assets/img/media/intersect.png" alt="">
 
-      <blockquote class="subscribe__call-quote">
+      <blockquote class="b-subscribe__call-quote">
         “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“
       </blockquote>
     </aside>
 
-    <form action="#" class="subscribe__form">
-      <h4 class="subscribe__form-title">SUBSCRIBE</h4>
+    <form action="#" class="b-subscribe__form">
+      <h4 class="b-subscribe__form-title">SUBSCRIBE</h4>
 
-      <div class="subscribe__form-text">FOR OUR NEW LETTER AND PROMOTION</div>
+      <div class="b-subscribe__form-text">FOR OUR NEW LETTER AND PROMOTION</div>
 
-      <div class="subscribe__form-wrap">
-        <input type="email" class="subscribe__form-input form__field form__placeholder" placeholder="Enter Your Email">
-        <button class="subscribe__form-submit btn">Subscribe</button>
+      <div class="b-subscribe__form-wrap">
+        <input type="email" class="b-subscribe__form-input b-form__field b-form__placeholder" placeholder="Enter Your Email">
+        <button class="b-subscribe__form-submit b-btn">Subscribe</button>
       </div>
     </form>
   </div>
 </section>
 
-<footer class="footer">
-  <div class="footer__inner container">
-    <ul class="footer__social">
-      <li class="footer__social-item">
+<footer class="b-footer">
+  <div class="b-footer__inner b-container">
+    <ul class="b-footer__social">
+      <li class="b-footer__social-item">
         <a href="#" rel="nofollow" target="_blank">
-          <svg class="footer__social-icon">
+          <svg class="b-footer__social-icon">
             <use xlink:href="assets/img/sprite.svg#fb"></use>
           </svg>
         </a>
       </li>
 
-      <li class="footer__social-item">
+      <li class="b-footer__social-item">
         <a href="#" rel="nofollow" target="_blank">
-          <svg class="footer__social-icon">
+          <svg class="b-footer__social-icon">
             <use xlink:href="assets/img/sprite.svg#inst"></use>
           </svg>
         </a>
       </li>
 
-      <li class="footer__social-item">
+      <li class="b-footer__social-item">
         <a href="#" rel="nofollow" target="_blank">
-          <svg class="footer__social-icon">
+          <svg class="b-footer__social-icon">
             <use xlink:href="assets/img/sprite.svg#pinterest"></use>
           </svg>
         </a>
       </li>
 
-      <li class="footer__social-item">
+      <li class="b-footer__social-item">
         <a href="#" rel="nofollow" target="_blank">
-          <svg class="footer__social-icon">
+          <svg class="b-footer__social-icon">
             <use xlink:href="assets/img/sprite.svg#twitter"></use>
           </svg>
         </a>
