--- a/src/styles/section/_home__products.scss
+++ b/src/styles/section/_home__products.scss
@@ -1,8 +1,8 @@
-.home__products {
+.b-home__products {
   margin-bottom: 95px;
 }
 
-.home__products-title {
+.b-home__products-title {
   margin-bottom: 6px;
   font-weight: 400;
   font-size: 30px;
@@ -10,7 +10,7 @@
   text-align: center;
 }
 
-.home__products-text {
+.b-home__products-text {
   font-size: 14px;
   line-height: 17px;
   color: #9F9F9F;
@@ -18,19 +18,19 @@
 }
 
 @media (min-width: 992px) {
-  .home__products-text {
+  .b-home__products-text {
     margin-bottom: 44px;
   }
 }
 
 @media (max-width: 699px) {
-  .home__products-text {
+  .b-home__products-text {
     margin-bottom: 63px;
   }
 }
 
 @media (min-width: 700px) and (max-width: 991px) {
-  .home__products-text {
+  .b-home__products-text {
     margin-bottom: 71px
   }
 }
