--- a/src/styles/section/_product.scss
+++ b/src/styles/section/_product.scss
@@ -1,18 +1,18 @@
-.product__item {
+.b-product__item {
   background-color: #F8F8F8;
 
-  &:hover .product__add {
+  &:hover .b-product__add {
     opacity: 1;
     pointer-events: auto;
   }
 }
 
-.product__media {
+.b-product__media {
   display: block;
   position: relative;
 }
 
-.product__add {
+.b-product__add {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -27,11 +27,11 @@
   transition: opacity .3s ease-in-out;
 }
 
-.product__boxed {
+.b-product__boxed {
   padding: 27px 16px 16px;
 }
 
-.product__boxed-title {
+.b-product__boxed-title {
   margin-bottom: 12px;
   font-size: 13px;
   line-height: 16px;
@@ -39,11 +39,11 @@
   font-weight: 400;
 }
 
-.product__boxed-link {
+.b-product__boxed-link {
   color: inherit;
 }
 
-.product__boxed-text {
+.b-product__boxed-text {
   margin-bottom: 16px;
   font-weight: 300;
   font-size: 14px;
@@ -51,46 +51,46 @@
   color: #5D5D5D;
 }
 
-.product__boxed-cost {
+.b-product__boxed-cost {
   color: $pink;
 }
 
-.product__more {
+.b-product__more {
   text-align: center;
 }
 
 @media (min-width: 700px) {
-  .product__list {
+  .b-product__list {
     display: grid;
     grid-template-rows: auto;
   }
-  .product__more {
+  .b-product__more {
     margin-top: 48px;
   }
 }
 
 @media (min-width: 992px) {
-  .product__list {
+  .b-product__list {
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
   }
 }
 
 @media (max-width: 699px) {
-  .product__list {
+  .b-product__list {
     margin-left: -7px;
     margin-right: -7px;
   }
-  .product__item:not(:last-of-type) {
+  .b-product__item:not(:last-of-type) {
     margin-bottom: 15px;
   }
-  .product__more {
+  .b-product__more {
     margin-top: 41px;
   }
 }
 
 @media (min-width: 700px) and (max-width: 991px) {
-  .product__list {
+  .b-product__list {
     grid-template-columns: repeat(2, 1fr);
     gap: 16px;
   }
