--- a/src/twig/templates/_top.twig
+++ b/src/twig/templates/_top.twig
@@ -1,104 +1,104 @@
-<div class="top">
-  <div class="top__inner container">
-    <a href="index.html" class="top__logo">
-      <img src="assets/img/logo.svg" class="top__logo-img" alt="The brand of Luxerious fashion">
+<div class="b-top">
+  <div class="b-top__inner b-container">
+    <a href="index.html" class="b-top__logo">
+      <img src="assets/img/logo.svg" class="b-top__logo-img" alt="The brand of Luxerious fashion">
     </a>
 
-    <div class="top__search">
-      <svg class="top__search-icon">
+    <div class="b-top__search">
+      <svg class="b-top__search-icon">
         <use xlink:href="assets/img/sprite.svg#search"></use>
       </svg>
     </div>
 
-    <div class="top__toggle">
-      <button type="button" class="top__toggle-btn js-top__toggle"></button>
+    <div class="b-top__toggle">
+      <button type="button" class="b-top__toggle-btn js-top__toggle"></button>
     </div>
 
-    <a href="#" class="top__login">
-      <svg class="top__login-icon">
+    <a href="reg.html" class="b-top__login">
+      <svg class="b-top__login-icon">
         <use xlink:href="assets/img/sprite.svg#user"></use>
       </svg>
     </a>
 
-    <a href="cart.html" class="top__basket" data-basket-amount="5">
-      <svg class="top__basket-icon">
+    <a href="cart.html" class="b-top__basket" data-basket-amount="5">
+      <svg class="b-top__basket-icon">
         <use xlink:href="assets/img/sprite.svg#basket"></use>
       </svg>
     </a>
 
 
     <!-- Begin float menu -->
-    <nav class="menu">
-      <div class="menu__title">MENU</div>
+    <nav class="b-menu">
+      <div class="b-menu__title">MENU</div>
 
-      <div class="menu__boxed">
-        <a href="#" class="menu__boxed-category">MAN</a>
+      <div class="b-menu__boxed">
+        <a href="#" class="b-menu__boxed-category">MAN</a>
 
-        <ul class="menu__list">
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Accessories</a>
+        <ul class="b-menu__list">
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Accessories</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Bags</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Bags</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Denim</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Denim</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">T-Shirts</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">T-Shirts</a>
           </li>
         </ul>
       </div>
 
-      <div class="menu__boxed">
-        <a href="#" class="menu__boxed-category">WOMAN</a>
+      <div class="b-menu__boxed">
+        <a href="#" class="b-menu__boxed-category">WOMAN</a>
 
-        <ul class="menu__list">
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Accessories</a>
+        <ul class="b-menu__list">
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Accessories</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Jackets & Coats</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Jackets & Coats</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Polos</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Polos</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">T-Shirts</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">T-Shirts</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Shirts</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Shirts</a>
           </li>
         </ul>
       </div>
 
-      <div class="menu__boxed">
-        <a href="#" class="menu__boxed-category">KIDS</a>
+      <div class="b-menu__boxed">
+        <a href="#" class="b-menu__boxed-category">KIDS</a>
 
-        <ul class="menu__list">
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Accessories</a>
+        <ul class="b-menu__list">
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Accessories</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Jackets & Coats</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Jackets & Coats</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Polos</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Polos</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">T-Shirts</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">T-Shirts</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Shirts</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Shirts</a>
           </li>
-          <li class="menu__list-item">
-            <a href="#" class="menu__list-link">Bags</a>
+          <li class="b-menu__list-item">
+            <a href="#" class="b-menu__list-link">Bags</a>
           </li>
         </ul>
       </div>
 
-      <button class="menu__close js-menu__close">
-        <svg class="menu__close-icon">
+      <button class="b-menu__close js-menu__close">
+        <svg class="b-menu__close-icon">
           <use xlink:href="assets/img/sprite.svg#close"></use>
         </svg>
       </button>
